--- a/js04_haifu/js04/kadai.html
+++ b/js04_haifu/js04/kadai.html
@@ -36,13 +36,14 @@
       request.then(function(response) {
         // TODO: Change code below to process the `response` object:
         console.log(response.result);
+        populateSheet(response.result);
       }, function(reason) {
         console.error('error: ' + reason.result.error.message);
       });
     }
 
     function initClient() {
-      var API_KEY = 'AIzaSyAib4rYvM7Jc44yBZcisff3hcrYRMff5O4';  // TODO: Update placeholder with desired API key.
+      var API_KEY = '';  // TODO: Update placeholder with desired API key.
 
       var CLIENT_ID = '959118115283-t5aknmh19s4o4qtvme1dnopquma4musf.apps.googleusercontent.com';  // TODO: Update placeholder with desired client ID.
 
@@ -82,6 +83,16 @@
     function handleSignOutClick(event) {
       gapi.auth2.getAuthInstance().signOut();
     }
+    function populateSheet(result){
+
+for(var row=0;row<8; row++){
+for(var col=0; col<3; co++){
+document.getElementById(row+":"+col).value = values[row][col];
+
+}
+}
+
+    }
     </script>
     <script async defer src="https://apis.google.com/js/api.js"
       onload="this.onload=function(){};handleClientLoad()"
@@ -89,5 +100,11 @@
     </script>
     <button id="signin-button" onclick="handleSignInClick()">Sign in</button>
     <button id="signout-button" onclick="handleSignOutClick()">Sign out</button>
+
+<div style="margin-left:auto; margin-right:auto;width:960px;">
+
+
+</div>
+
   </body>
 </html>
